--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         "Bordado", "Emborrachado", "Enfeite", "Strass", "Tira", "Gorgurão", 
         "Elastico", "Fivela", "Velcro", "Ilhós", "Cordão", "Caixa", 
         "Cola/solvente", "Etiqueta", "Linha", "Despesas fixa", "Corte", 
-        "Pesponto", "Montagem", "Enfachetar salto", "Waster"
+        "Pesponto", "Montagem", "Enfachetar salto", "Waster","Lucro Fabricação"
     ];
 
     const listaDiv = document.getElementById('lista-itens');
@@ -265,3 +265,4 @@
 
 </body>
 </html>
+
