--- a/lojas.html
+++ b/lojas.html
@@ -63,7 +63,7 @@
 </div>
 
 <script>
-    const itensPadrao = ["Sola", "Pintura Sola", "Facheta Salto", "Palmilha", "Cabedal", "Estampa", "Bordado", "Emborrachado", "Enfeite", "Strass", "Tira", "Gorgurão", "Elastico", "Fivela", "Velcro", "Ilhós", "Cordão", "Caixa", "Cola/solvente", "Etiqueta", "Linha", "Despesas fixa", "Corte", "Pesponto", "Montagem", "Enfachetar salto", "Waster"];
+    const itensPadrao = ["Sola", "Pintura Sola", "Facheta Salto", "Palmilha", "Cabedal", "Estampa", "Bordado", "Emborrachado", "Enfeite", "Strass", "Tira", "Gorgurão", "Elastico", "Fivela", "Velcro", "Ilhós", "Cordão", "Caixa", "Cola/solvente", "Etiqueta", "Linha", "Despesas fixa", "Corte", "Pesponto", "Montagem", "Enfachetar salto", "Waster","Lucro"];
     const listaDiv = document.getElementById('lista-itens');
 
     // Inicialização
@@ -207,3 +207,4 @@
 </body>
 
 </html>
+
