--- a/lojas.html
+++ b/lojas.html
@@ -64,7 +64,7 @@
 </div>
 
 <script>
-    const itensPadrao = ["Sola", "Pintura Sola", "Facheta Salto", "Palmilha", "Cabedal", "Estampa", "Bordado", "Emborrachado", "Enfeite", "Strass", "Tira", "Gorgurão", "Elastico", "Fivela", "Velcro", "Ilhós", "Cordão", "Caixa", "Cola/solvente", "Etiqueta", "Linha", "Despesas fixa", "Corte", "Pesponto", "Montagem", "Enfachetar salto", "Waster","LUCRO"];
+    const itensPadrao = ["Preço do Produto"];
     const listaDiv = document.getElementById('lista-itens');
 
     // Inicialização
@@ -214,6 +214,7 @@
 </body>
 
 </html>
+
 
 
 
