--- a/venda-direta.html
+++ b/venda-direta.html
@@ -94,7 +94,7 @@
     <h1>Venda Direta (Soma Simples)</h1>
     <input type="text" id="nome-produto-input" class="input-produto no-print" placeholder="Nome do Produto / Referência" oninput="salvarDados()">
     <div class="file-controls no-print" style="display: flex; gap: 10px; margin-bottom: 20px;">
-        <button onclick="exportarDados()" style="background: #0ea5e9; color: white; border: none; padding: 10px; border-radius: 6px; cursor: pointer; flex: 1; font-weight: bold;">
+        <button onclick="exportarDados()" style="background: #068c0a; color: white; border: none; padding: 10px; border-radius: 6px; cursor: pointer; flex: 1; font-weight: bold;">
             ⬇ Salvar Arquivo
         </button>
         <button onclick="document.getElementById('input-arquivo').click()" style="background: #8b5cf6; color: white; border: none; padding: 10px; border-radius: 6px; cursor: pointer; flex: 1; font-weight: bold;">
@@ -335,6 +335,7 @@
 </body>
 
 </html>
+
 
 
 
