--- a/venda-direta.html
+++ b/venda-direta.html
@@ -132,7 +132,7 @@
 </div>
 
 <script>
-    const itensPadrao = ["Sola", "Pintura Sola", "Facheta Salto", "Palmilha", "Cabedal", "Estampa", "Bordado", "Emborrachado", "Enfeite", "Strass", "Tira", "Gorgurão", "Elastico", "Fivela", "Velcro", "Ilhós", "Cordão", "Caixa", "Cola/solvente", "Etiqueta", "Linha", "Despesas fixa", "Corte", "Pesponto", "Montagem", "Enfachetar salto", "Waster","LUCRO"];
+    const itensPadrao = ["Sola", "Pintura Sola", "Facheta Salto", "Palmilha", "Cabedal","Viés", "Estampa", "Bordado", "Emborrachado", "Enfeite", "Strass", "Tira", "Gorgurão", "Elastico", "Fivela", "Velcro", "Ilhós", "Cordão", "Caixa", "Cola/solvente", "Etiqueta", "Linha", "Despesas fixa", "Corte", "Pesponto", "Montagem", "Enfachetar salto", "Waster","LUCRO"];
     const listaDiv = document.getElementById('lista-itens');
 
     function init() {
@@ -334,6 +334,7 @@
 </body>
 
 </html>
+
 
 
 
